delete p in <p> tag

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 <body>
     <h1>Blockchain UNN</h1>
+    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis minima cum necessitatibus odio? Adipisci,
+        rerum.
+        </>
 </body>
 
 </html>
